hphp/test/zend/good/ext/date/tests/DateTime_sub-dates.php
<?php

require 'examine_diff.inc';
define('PHPT_DATETIME_SHOW', PHPT_DATETIME_SHOW_SUB);
require 'DateTime_data-dates.inc';

?>