hphp/test/zend/bad/ext/date/tests/DateTime_sub-fall-type3-type2.php
<?php

require 'examine_diff.inc';
define('PHPT_DATETIME_SHOW', PHPT_DATETIME_SHOW_SUB);
require 'DateTime_data-fall-type3-type2.inc';

?>